[gd_scene load_steps=23 format=3 uid="uid://3v8ebd54d8fn"]

[ext_resource type="Script" path="res://Templates/Building/building.gd" id="1_lnpmw"]
[ext_resource type="Texture2D" uid="uid://c8gw3ds38rx3k" path="res://ParticleProject/Images/brightGlowParticle.png" id="2_5kahi"]
[ext_resource type="Script" path="res://components/ClickDetectionComponent.gd" id="3_8yfd6"]
[ext_resource type="Texture2D" uid="uid://cnckwdw8gjqss" path="res://ParticleProject/Images/SuperSmokeCCO.png" id="3_tyd5j"]
[ext_resource type="Script" path="res://components/HealthComponent.gd" id="5_mb00y"]
[ext_resource type="AudioStream" uid="uid://clq0p801xbhka" path="res://Sounds/building.wav" id="5_msk2t"]

[sub_resource type="Gradient" id="Gradient_mp06n"]
offsets = PackedFloat32Array(0, 0.348993, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_p8x74"]
gradient = SubResource("Gradient_mp06n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vxi67"]
spread = 180.0
gravity = Vector3(0, 1, 0)
initial_velocity_min = 0.5
initial_velocity_max = 1.0
scale_min = 0.5
scale_max = 2.0
color_ramp = SubResource("GradientTexture1D_p8x74")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dis22"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 0.709804, 1)
albedo_texture = ExtResource("2_5kahi")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_1xdrf"]
material = SubResource("StandardMaterial3D_dis22")
size = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_a0bmm"]
offsets = PackedFloat32Array(0, 0.270408, 0.632653, 0.806122, 0.913265, 1)
colors = PackedColorArray(0.752941, 0.752941, 0.752941, 0.54902, 0.482353, 0.482353, 0.482353, 0.403922, 0.486275, 0.486275, 0.486275, 0.329412, 0.407843, 0.407843, 0.407843, 0.231373, 0.407843, 0.407843, 0.407843, 0.14902, 0.407843, 0.407843, 0.407843, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d7tj0"]
gradient = SubResource("Gradient_a0bmm")

[sub_resource type="Curve" id="Curve_n4xjj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.118943, 0.127273), 0.0, 0.0, 0, 0, Vector2(1, 0.0727272), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ngf4v"]
curve = SubResource("Curve_n4xjj")

[sub_resource type="Curve" id="Curve_v0exd"]
max_value = 10.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.343612, 1.90909), 0.0, 0.0, 0, 0, Vector2(0.9163, 4.45455), 0.0, 0.0, 0, 0, Vector2(1, 5.45455), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_3p8yy"]
curve = SubResource("Curve_v0exd")

[sub_resource type="Curve" id="Curve_v2ldn"]
min_value = -30.0
max_value = 30.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.577092, 4.36364), 0.0, 0.0, 0, 0, Vector2(0.806167, 7.09091), 0.0, 0.0, 0, 0, Vector2(1, 7.63636), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_14sng"]
curve = SubResource("Curve_v2ldn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7kwhw"]
spread = 90.0
flatness = 0.2
gravity = Vector3(0, 0, 0)
initial_velocity_min = -0.2
initial_velocity_max = 0.4
angular_velocity_max = 40.0
linear_accel_min = 0.01
linear_accel_max = 0.01
linear_accel_curve = SubResource("CurveTexture_ngf4v")
tangential_accel_min = 0.04
tangential_accel_max = 0.04
tangential_accel_curve = SubResource("CurveTexture_14sng")
angle_max = 360.0
scale_min = 0.2
scale_max = 0.4
scale_curve = SubResource("CurveTexture_3p8yy")
color = Color(0.560784, 0.560784, 0.560784, 1)
color_ramp = SubResource("GradientTexture1D_d7tj0")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_offset_max = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_bmlgb"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.803922, 0.803922, 0.803922, 1)
albedo_texture = ExtResource("3_tyd5j")
albedo_texture_msdf = true
billboard_mode = 3
particles_anim_h_frames = 6
particles_anim_v_frames = 5
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_xrx6h"]
material = SubResource("StandardMaterial3D_bmlgb")

[node name="Building" type="Node3D"]
script = ExtResource("1_lnpmw")

[node name="Effects" type="Node3D" parent="."]

[node name="CreationFinishedParticle" type="GPUParticles3D" parent="Effects"]
unique_name_in_owner = true
emitting = false
amount = 40
sub_emitter = NodePath(".")
lifetime = 1.5
one_shot = true
speed_scale = 2.0
explosiveness = 0.68
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_vxi67")
draw_pass_1 = SubResource("QuadMesh_1xdrf")

[node name="CreationParticle" type="GPUParticles3D" parent="Effects"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.221888, 0.0359768, -0.0570499)
emitting = false
amount = 100
lifetime = 6.0
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource("ParticleProcessMaterial_7kwhw")
draw_pass_1 = SubResource("QuadMesh_xrx6h")

[node name="Animations" type="Node3D" parent="."]

[node name="CreationAnimationPlayer" type="AnimationPlayer" parent="Animations"]
unique_name_in_owner = true
root_node = NodePath("../..")

[node name="DestructionAnimationPlayer" type="AnimationPlayer" parent="Animations"]
unique_name_in_owner = true
root_node = NodePath("../..")

[node name="Componenets" type="Node3D" parent="."]

[node name="ClickDetectionComponent" type="Area3D" parent="Componenets"]
unique_name_in_owner = true
script = ExtResource("3_8yfd6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Componenets/ClickDetectionComponent"]

[node name="HealthComponent" type="Node" parent="Componenets"]
unique_name_in_owner = true
script = ExtResource("5_mb00y")

[node name="Audios" type="Node3D" parent="."]

[node name="CreationAudio" type="AudioStreamPlayer3D" parent="Audios"]
unique_name_in_owner = true
stream = ExtResource("5_msk2t")
volume_db = -10.0
max_db = 0.732
pitch_scale = 0.8
